# ho-rewriting

./: README.md  ho-rewriting.cabal
examples/: Feldspar.hs  Simple.hs
src/Data/Rewriting/: FirstOrder.hs  HigherOrder.hs  Rules.hs
tests/: Capture.hs
